--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
-{ "name" : "banzai-docstore-couchdb"
+{ "name" : "banzai-couchdb-store"
 , "description" : "CouchDB plugin module for Banzai document store."
 , "tags" : ["ETL", "pipeline", "document", "state machine"]
-, "version" : "1.0.1"
+, "version" : "1.0.2"
 , "author" : "Pedro Teixeira <pedro.teixeira@gmail.com>"
 , "repository" :
   { "type" : "git"
